# vscode_theme_generator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
schema/: full_palette.json  palette.json
src/: cli.rs  color.rs  determinator.rs  io.rs  main.rs  model.rs  optimize.rs  palette.rs  paths.rs  schema.rs  setting.rs  util.rs
src/cli/: generate.rs  regenerate.rs
src/color/: util.rs  wrap.rs
src/color/wrap/: wrap_srgb.rs
src/io/: mod.rs  palette.rs  setting.rs
src/io/setting/: editor_token_color_customizations.rs  mod.rs  text_mate_rule.rs  workbench_color_customizations.rs
src/model/: base_palette.rs  color.rs  color_map.rs  colormap.rs  full_palette.rs  hex_str.rs  hexstr.rs  linear.rs  mod.rs  scored_value.rs  theme.rs
src/optimize/: base_palette.rs
src/palette/: base_palette.rs  full_palette.rs  mod.rs  wrap.rs
src/palette/wrap/: wrap_base_palette.rs  wrap_full_palette.rs
src/schema/: palette.rs  setting.rs
src/schema/setting/: editor_token_color_customizations.rs  text_mate_rule.rs  workbench_color_customizations.rs
src/setting/: editor_token_color_customizations.rs  text_mate_rule.rs  workbench_color_customizations.rs
